# SCBE-AETHERMOORE

./: .coderabbit.yaml  .coverage  .cursorrules  .dockerignore  .editorconfig  .env.example  .firebaserc  .flake8  .gcloudignore  .gitattributes  .gitignore  .gitleaks.toml  .gitmodules  .mcp.json  .mcp.json.linux  .mcp_platform.json  .npmignore  .pre-commit-config.yaml  .prettierignore  .tmp_hypothesis_paths.txt  .vercelignore  .verify_origin_README.md  AETHERMOORE_AI_WORKFLOW_PLATFORM_DRAFT.md  AGENTS.md  ALIASES.md  APP_STORE_STRATEGY.md  ARCHITECTURE.md  CANONICAL_SYSTEM_STATE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CLEANUP_NOTES.md  CODE_OF_CONDUCT.md  COMMERCIAL.md  COMPLETE_IP_PORTFOLIO_READY_FOR_USPTO.md  CONCEPTS.md  CONTRIBUTING.md  DEMO.md  DEMOS.md  DEPLOYMENT.md  (+159 more)
.claude/: settings.json  settings.local.json
.clawhub/: lock.json
.codex-plan-check/: multi-browser-click-fanout.md
.cursor/: environment.json  hooks.json
.devcontainer/: bash.cmd  devcontainer.json  ensure-mount-sources  ensure-mount-sources.cmd
.githooks/: README.md  pre-push
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.grok/: settings.json
.playwright-cli/: page-2026-03-02T14-41-35-135Z.yml  page-2026-03-02T14-41-56-316Z.yml  page-2026-03-02T14-42-12-535Z.yml  page-2026-03-02T14-42-14-445Z.yml  page-2026-03-04T05-01-24-678Z.yml  page-2026-03-04T05-29-58-678Z.yml
.roots/: REPO_GENERATED_ARCHIVE_2026-04-11.txt  S_drive_README.txt
.scbe/: agent_squad.json  cli-context.json  crosstalk_session_state.json  geoseal_calls.jsonl  next-coder-marker.md  snapshot_tail_filter.txt
.streamlit/: config.toml
GumRoad/: GUMROAD_LISTINGS.md  gumroad_publish_manifest.json  product_manifest.json
SCBE-AETHERMOORE-v3.0.0/: CHANGELOG.md  README.md  mcp-config.json  mcp-server.py  package-lock.json  package.json
aether-browser/: README.md
aetherbrowse/: package-lock.json  package.json
aetherdesk/: README.md  server.js
agents/: AGENT_BUS_NOTES.md  README.md  __init__.py  aetherbrowse_cli.py  agent_bus.py  agent_bus_browser.py  agent_bus_cli.py  agent_bus_cost.py  agent_bus_extensions.py  agent_bus_ledger.py  agent_bus_replay.py  agent_bus_schema.py  agent_bus_signing.py  agent_bus_team.py  agent_bus_training.py  antivirus_membrane.py  browser_agent.py  browser_api.py  browser_tools.py  claude.md  codex.md  extension_gate.py  hyperbolic_scanner.py  kernel_antivirus_gate.py  linux_enforcement_backends.py  linux_enforcement_hooks.py  linux_kernel_event_bridge.py  marketing_agents.py  multi_model_modal_matrix.py  playwright_runtime.py  pqc_key_auditor.py  remote_display.py  research_agent.py  swarm_browser.py  telegram_bot.py  web_scraper.py
ai-ide/: index.html  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
api/: _agent_common.js  _chat_llm.js  _governed_output.js  _polly_hf_upload.js  _polly_rate_limit.js  _polly_train_capture.js  audit_export.py  auth.py  governance-schema.yaml  main.py  metering.py  persistence.py  research_routes.py  validation.py
app/: index.html  package-lock.json  package.json  server.js  vite.config.mjs
articles/: 01_the_spiralverse_introduction.md  02_izack_thorne_dimensional_architect.md  03_aria_ravencrest_mother_of_avalon.md  04_polly_the_raven_who_remembers.md  05_six_sacred_tongues.md  06_collaborative_magic_strongest_edge.md  09_post_quantum_cryptography_scbe.md  10_energy_aware_compute_governor.md  11_honest_benchmark_34_percent.md  12_i_tested_my_own_109x_claim.md  12_i_tested_my_own_109x_claim_thread.md  12_trichromatic_forgery_resistance.md  SHOW_HN_materials_bench.md  devto_seo_post.md
artifacts/: agentic_antivirus_report.json  agentic_antivirus_report.md  biblical_null_space_ollama_issdandavis7795_AetherBot.json  biblical_null_space_ollama_llama3.2.json  code_ab_results.json  code_ab_v2_results.json  eval_polly_stack.json  notion_pipeline_gap_review.json  notion_pipeline_gap_review.md  pump_aquifer.jsonl  self_improvement_manifest.json  self_improvement_summary.md  swarm_autopilot_pushcheck.json  swarm_autopilot_test.json  swarm_autopilot_test2.json  swarm_quick_check.json  swarm_run_live.json  swarm_run_local.json  swarm_run_now.json  swarm_run_verification.json  swarm_run_verification2.json  test-results-vitest.after.json  test-results-vitest.json
aws/: README.md  deploy.ps1  hyperbolic_validation_lambda.py  lambda_handler.py  requirements-lambda.txt  template.yaml
benchmarks/: scbe_benchmark_standalone.py  scbe_governance_benchmark.ipynb
cloud/: Dockerfile  bootstrap.sh
conference-app/: package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.ts
config/: AGENTS.md  distribution_package_map.json  offline_bundle_profiles.json  prometheus.yml  proton_mail_rules.json  release_surfaces.v1.json  repo_consolidation_inventory.json  repurpose_policy.json  scbe.alerts.yml  scbe_core_axioms_v1.yaml  steward.yml  system_hub_sync.example.json  web_access_map.json
configs/: system_coder.spec.yaml
dashboard/: physics-simulator.html  scbe_monitor.html
demo/: README.md  aether_eggs.py  aethermoor_game.py  atla.py  battle.py  companion_ai.py  create_origins.py  cside_export.py  demo_spiralverse_story.py  dungeon.py  encounters.py  engine.py  gacha_squad_demo.py  georama.py  governance_simulator.twee  gym_env.py  headless.py  hf_trainer.py  index.html  kary_kernel.py  mars-communication.html  n8n_bridge.py  npc_brain.py  npc_gateway.py  obsidian_ai_hub.py  origin_creator.py  overworld.py  party.py  pivot_knowledge.py  play_aethermoor.py  player.py  pokemon_ai_agent.py  pokemon_data_gen.py  pokemon_memory.py  pokemon_trainer_hooks.py  requirements.txt  rom_emulator_bridge.py  roundtable-demo.ts  save_system.py  scene_library.py  (+5 more)
demos/: crt_negative_triangulation.html  crt_prime_sieve_viz.html  (+12 more)
rust/ast_cube/: .gitignore  Cargo.toml
rust/ast_cube/src/: main.rs
rust/ast_cube_poly/: Cargo.toml
rust/ast_cube_poly/src/: main.rs
rust/ast_cube_poly_legacy/: Cargo.toml
rust/ast_cube_poly_legacy/src/: main.rs
rust/ast_cube_ruff/: Cargo.toml
rust/ast_cube_ruff/src/: main.rs
(+13721 files in other folders)
