[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scbe-aethermoore"
version = "4.1.3"
description = "Hyperbolic Geometry AI Safety Framework with 14-Layer Architecture"
readme = "README.md"
license = "MIT OR Apache-2.0"
license-files = ["LICENSE", "LICENSE-APACHE"]
requires-python = ">=3.11"
authors = [
    {name = "Issac Daniel Davis", email = "issdandavis@gmail.com"},
]
keywords = [
    "cryptography",
    "security",
    "hyperbolic-geometry",
    "poincare-ball",
    "ai-safety",
    "governance",
    "quantum-resistant",
    "14-layer-architecture",
    "harmonic-scaling",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security :: Cryptography",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Homepage = "https://github.com/issdandavis/SCBE-AETHERMOORE"
Repository = "https://github.com/issdandavis/SCBE-AETHERMOORE"
Issues = "https://github.com/issdandavis/SCBE-AETHERMOORE/issues"
Sponsor = "https://github.com/sponsors/issdandavis"
Funding = "https://ko-fi.com/izdandavis"
Supporter = "https://aethermoore.com/SCBE-AETHERMOORE/supporter.html"

[project.scripts]
scbe = "scbe:main"
scbe-scan = "scbe_aethermoore.__main__:main"
scbe-system = "scripts.scbe_system_cli:main"
scbe-convert-to-sft = "symphonic_cipher.scbe_aethermoore.convert_to_sft:main"
scbe-code-prism = "code_prism.cli:main"

[tool.setuptools]
py-modules = ["scbe"]

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "neurogolf*",
    "scbe_aethermoore*",
    "code_prism*",
    "flow_router*",
    "symphonic_cipher*",
    "api*",
    "crypto*",
    "harmonic*",
    "spiralverse*",
    "minimal*",
    "storage*",
]
exclude = [
    "tests*",
    "agents*",
    "training*",
    "scripts*",
    # Test subpackages
    "*.tests",
    "*.tests.*",
    # Excluded submodules
    "api.github_app*",
    "api.billing*",
    "api.keys*",
    "symphonic_cipher.geoseal*",
]

[tool.setuptools.package-dir]
# Root-level package not under src/
api = "api"
