[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scbe-aethermoore"
version = "4.2.1"
description = "Hyperbolic Geometry AI Safety Framework with 14-Layer Architecture"
readme = "README.md"
license = "MIT OR Apache-2.0"
license-files = ["LICENSE", "LICENSE-APACHE"]
requires-python = ">=3.11"
dependencies = [
    # The CLI core + Sacred-Tongue/cube engine. numpy is the only hard runtime
    # dependency (pulled by python.scbe); everything else is an optional extra
    # below, so a base `pip install scbe-aethermoore` stays light.
    "numpy>=2.4.6",
]
authors = [
    {name = "Issac Daniel Davis", email = "issdandavis@users.noreply.github.com"},
]
keywords = [
    "cryptography",
    "security",
    "hyperbolic-geometry",
    "poincare-ball",
    "ai-safety",
    "governance",
    "quantum-resistant",
    "14-layer-architecture",
    "harmonic-scaling",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security :: Cryptography",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.optional-dependencies]
# Install only what a given workflow needs: `pip install scbe-aethermoore[crypto]`.
crypto = [
    "liboqs-python==0.15.0",
    "pycryptodome>=3.20.0",
    "argon2-cffi>=23.1.0",
    "cryptography>=48.0.1",
]
api = [
    "fastapi>=0.136.1",
    "starlette>=1.3.1",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.32",
    "psycopg[binary]>=3.3.4",
]
science = [
    "scipy>=1.14.0",
    "z3-solver>=4.12",
    "openpyxl==3.1.5",
]
browser = [
    "playwright>=1.59.0",
    "beautifulsoup4>=4.15.0",
    "lxml>=6.1.0",
]
net = [
    "httpx>=0.27.0",
    "requests>=2.32.0",
    "jsonschema>=4.23.0",
    "urllib3>=2.7.0",
    "certifi>=2026.5.20",
    "idna>=3.18",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-asyncio>=1.4.0",
    "hypothesis>=6.155.2",
    "httpx>=0.27.0",
]
all = ["scbe-aethermoore[crypto,api,science,browser,net]"]

[project.urls]
Homepage = "https://github.com/issdandavis/SCBE-AETHERMOORE"
Repository = "https://github.com/issdandavis/SCBE-AETHERMOORE"
Issues = "https://github.com/issdandavis/SCBE-AETHERMOORE/issues"
Sponsor = "https://github.com/sponsors/issdandavis"
Funding = "https://ko-fi.com/izdandavis"
Supporter = "https://aethermoore.com/SCBE-AETHERMOORE/supporter.html"

[project.scripts]
scbe = "scbe:main"
scbe-scan = "scbe_aethermoore.__main__:main"
scbe-convert-to-sft = "symphonic_cipher.scbe_aethermoore.convert_to_sft:main"
scbe-code-prism = "code_prism.cli:main"

[tool.setuptools]
py-modules = ["scbe"]

[tool.setuptools.packages.find]
where = ["src", "."]
include = [
    "python*",
    "src*",
    "neurogolf*",
    "scbe_aethermoore*",
    "code_prism*",
    "flow_router*",
    "symphonic_cipher*",
    "crypto*",
    "harmonic*",
    "spiralverse*",
    "minimal*",
    "storage*",
]
exclude = [
    "tests*",
    "agents*",
    "training*",
    "scripts*",
    # Test subpackages
    "*.tests",
    "*.tests.*",
    # Excluded submodules
    "api.github_app*",
    "api.billing*",
    "api.keys*",
    "symphonic_cipher.geoseal*",
]

[tool.setuptools.package-data]
"python.scbe" = ["*.json", "data/*.csv", "data/*.md"]

[tool.setuptools.package-dir]
# Root-level package not under src/
python = "python"
