[package]
name = "ast_cube_poly_legacy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ast_cube_poly_legacy"
path = "src/main.rs"

[dependencies]
tree-sitter = "0.20"
tree-sitter-c-sharp = "0.20"
tree-sitter-lua = "0.2"
tree-sitter-kotlin = "0.3"
tree-sitter-swift = "0.7"
tree-sitter-zig = "1.1"
