[package]
name = "ast_cube_ruff"
version = "0.1.0"
edition = "2021"
description = "Ruff-parser AST cube encoder (100x path) for SCBE-AETHERMOORE"

[[bin]]
name = "ast_cube_ruff"
path = "src/main.rs"

[dependencies]
ruff_python_parser = { package = "rustpython-ruff_python_parser", version = "0.15" }
ruff_python_ast = { package = "rustpython-ruff_python_ast", version = "0.15" }
sha2 = "0.10"
mimalloc = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
